src/main/java/com/example/login/error/UserNotFoundException.java
package com.example.login.error;

public class UserNotFoundException extends Exception{
    public UserNotFoundException(String message){super(message);}
}
